@@ -1,4 +1,3 @@
-#require "bundler/gem_tasks"
 require 'rake/testtask'
 require 'rake/clean'
 require 'rbconfig'
