@@ -1,2 +1,6 @@
-require 'opengl_c_impl'
+require_relative 'opengl_c_impl'
 require_relative 'opengl_platform'
+
+module OpenGL
+  Impl = "Binary" # .dll/.so/.dylib
+end
