@@ -1,7 +1,7 @@
-require 'opengl_c'
-require 'opengl_ext_c_impl'
-require 'opengl_ext_command'
-require 'opengl_ext_enum'
+require_relative 'opengl_c'
+require_relative 'opengl_ext_c_impl'
+require_relative 'opengl_ext_command'
+require_relative 'opengl_ext_enum'
 
 module OpenGL
 
